Fixed ticket decription label alignment issue and Route from side menu, Enabled back button

--- a/src/global.scss
+++ b/src/global.scss
@@ -257,6 +257,10 @@
   float: right !important;
 }
 
+.float-left {
+  float: left !important;
+}
+
 .button-balanced {
   background-color: #2b3d4b !important;
   color: white !important;
